# sdl_hmi

./: .gitignore  CMakeLists.txt  FindQt.sh  LICENSE  QT_HMI_API.xml  README.md  log4cxx.properties
atf_ui/: app.js  package.json
atf_ui/controllers/: controller.js  run_atf.js
atf_ui/model/: model.js
atf_ui/public/javascripts/: jquery-1.11.2.min.js  spectrum.js  start.js  test_suite.js
atf_ui/public/javascripts/lib/: validator.min.js
atf_ui/public/javascripts/lib/src-min/: ace.js  ext-beautify.js  ext-chromevox.js  ext-elastic_tabstops_lite.js  ext-emmet.js  ext-error_marker.js  ext-keybinding_menu.js  ext-language_tools.js  ext-linking.js  ext-modelist.js  ext-old_ie.js  ext-searchbox.js  ext-settings_menu.js  ext-spellcheck.js  ext-split.js  ext-static_highlight.js  ext-statusbar.js  ext-textarea.js  ext-themelist.js  ext-whitespace.js  keybinding-emacs.js  keybinding-vim.js  mode-abap.js  mode-abc.js  mode-actionscript.js  mode-ada.js  mode-apache_conf.js  mode-applescript.js  mode-asciidoc.js  mode-assembly_x86.js  mode-autohotkey.js  mode-batchfile.js  mode-c9search.js  mode-c_cpp.js  mode-cirru.js  mode-clojure.js  mode-cobol.js  mode-coffee.js  mode-coldfusion.js  mode-csharp.js  (+108 more)
atf_ui/public/stylesheets/: style.css
atf_ui/routes/: index.js
atf_ui/views/: config.jade  error.jade  index.jade  layout.jade  registerForm.jade  test_suite.jade
atf_ui/views/modals/: notify.jade
codegen/: make_notifications_qml.py  make_qml_dbus_cpp.py  make_request_to_sdl.py
qml_model_qt4/: CMakeLists.txt  MainWindow.qml
qml_model_qt5/: CMakeLists.txt  MainWindow.qml
qml_model_qt5/hmi_api/: BasicCommunication.qml  Buttons.qml  Common.js  Navigation.qml  SDL.qml  TTS.qml  UI.qml  VR.qml  VehicleInfo.qml
qml_model_qt5/models/: DataStorage.qml  SettingsStorage.qml
qml_model_qt5/popups/: AlertWindow.qml  InteractionPopup.qml  PerformAudioPassThruPopup.qml  SliderPopup.qml  TTSPopUp.qml  VRPopUp.qml
qml_model_qt5/views/: ApplicationListView.qml  PolicyAppListView.qml  ScrollableMessageView.qml  SettingsSourceView.qml  WarningInfo.qml
qml_plugins/: CMakeLists.txt
qml_plugins/dbus_adapter/: CMakeLists.txt  dbus_plugin.cc  dbus_plugin.h
qml_plugins/dbus_adapter/core/: abstractadapter.cpp  abstractadapter.h  argument.h  castwatcher.h  connector.h  convert.h  courier.h  handle.h  message.h  optional.h  privateinterface.h  slave.cpp  slave.h  struct.h  watcher.h
qml_plugins/dbus_adapter/core/dbus/: dbusconnector.cpp  dbusconnector.h  dbusmessage.h  dbuswatcher.h
qml_plugins/dbus_adapter/protocol/: structures.h
qml_plugins/dbus_adapter/protocol/interfaces/: basiccommunication.cpp  basiccommunication.h  buttons.cpp  buttons.h  navigation.cpp  navigation.h  sdl.h  tts.cpp  tts.h  ui.cpp  ui.h  vehicleinfo.cpp  vehicleinfo.h  vr.cpp  vr.h
qml_plugins/dbus_adapter/protocol/structures/: beltstatus.h  buttoncapabilities.h  clustermodestatus.h  deviceinfo.h  ecallinfo.h  emergencyevent.h  gpsdata.h  hmiapplication.h  hmicapabilities.h  imagefield.h  imageresolution.h  mykey.h  permissionitem.h  screenparams.h  singletirestatus.h  softbuttoncapabilities.h  textfield.h  timeformat.h  toucheventcapabilities.h  turn.h  vehicletype.h
qml_plugins/hw_buttons/: CMakeLists.txt  attributed_mouse_event.cc  attributed_mouse_event.h  hmi_hwbuttons.h  masked_container.cc  masked_container.h
qml_plugins/log4cxx/: CMakeLists.txt  log4cxx_plugin.cc  log4cxx_plugin.h
qml_plugins/named_pipe_notifier/: CMakeLists.txt  named_pipe_notifier_plugin.cc  named_pipe_notifier_plugin.h
qml_plugins/protocol/: CMakeLists.txt  protocol_plugin.cc  protocol_plugin.h  qmldir
qml_plugins/protocol/core/: abstractadapter.cpp  abstractadapter.h  abstractitem.cpp  abstractitem.h  abstractmessage.cpp  abstractmessage.h  argument.h  castwatcher.h  connector.h  context.h  convert.h  coremessage.cpp  coremessage.h  courier.cpp  courier.h  handle.h  message.h  messageinterface.h  method.cpp  method.h  optional.cpp  optional.h  privateinterface.h  procedure.cpp  procedure.h  service.cpp  service.h  signal.cpp  signal.h  slave.cpp  slave.h  struct.h  watcher.h
qml_plugins/protocol/dbus/: dbuscastwatcher.h  dbusconnector.cpp  dbusconnector.h  dbusmessage.cpp  dbusmessage.h  dbuswatcher.cpp  dbuswatcher.h
qml_plugins/protocol/protocol/interfaces/: basiccommunication.cpp  basiccommunication.h  buttons.cpp  buttons.h  navigation.cpp  navigation.h  sdl.cpp  sdl.h  tts.cpp  tts.h  ui.cpp  ui.h  vehicleinfo.cpp  vehicleinfo.h  vr.cpp  vr.h
qml_plugins/protocol/protocol/structures/: airbagstatus.h  audiopassthrucapabilities.h  bodyinformation.h  choice.h  coordinate.h  datetime.h  devicestatus.h  didresult.h  displaycapabilities.h  headlampstatus.h  image.h  keyboardproperties.h  locationdetails.h  menuparams.h  oasisaddress.h  presetbankcapabilities.h  serviceinfo.h  softbutton.h  textfieldstruct.h  tirestatus.h  touchcoord.h  touchevent.h  ttschunk.h  userfriendlymessage.h  vehicledataresult.h  vrhelpitem.h
qml_plugins/protocol/websocket/: inbox.cpp  inbox.h  websocketcastwatcher.h  websocketconnector.cpp  websocketconnector.h  websocketmessage.cpp  websocketmessage.h  websocketwatcher.cpp  websocketwatcher.h
src/components/: CMakeLists.txt
src/components/dbus/codegen/: make_request_to_sdl.py
src/components/qt_hmi/qml_plugins/dbus_adapter/: CMakeLists.txt  dbus_controller.cc
src/qml_model_qt5/: CMakeLists.txt
src/qml_plugins/dbus_adapter/: CMakeLists.txt
test/: CMakeLists.txt  readme.txt
tools/codegen/: make_notifications_qml.py
